--- a/index.html
+++ b/index.html
@@ -173,6 +173,31 @@
       </div>
     </div>
   </div>
+  <div class="projects"> 
+    <div class="heading"><h2>Projects</h2></div>
+    <div class="pro">
+     
+      <div class="procontainer">
+        <div class="column">
+          <div class="about" id="names">
+            <label class="item">Project Title</label><input type="text" class="item" placeholder="eg. Shubham" />
+          </div>
+          <div class="about">
+            <label class="item"> Project Link</label><input type="text" class="item" placeholder="eg.link " />
+          </div>
+          <div class="about">
+            <label class="item">Description</label><input type="text" class="item" placeholder="eg. Description" />
+          </div>
+        </div>
+      </div>
+      <div class="addpro probtn">
+        <div class="skillbtn">
+          <div class="add" onclick="addPro()">+</div>
+
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="getpdf"><button class="download">Download Resume</button></div>
 </body>
 <script src="script.js"></script>
