Home page added

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Resume Builder</title>
+  <title>ResumeCraft</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
   <nav class="navbar">
     <div class="logo">
-      <p>Resume Builder</p>
+      <p><span class="desire">R</span>esume<span class="desire">C</esumespan>raft</p>
     </div>
     <div class="navi">
-      <div class="navitem"><a href="">Home</a></div>
-      <div class="navitem"><a href="">Themes</a></div>
+      <div class="navitem"><a href="home.html">Home</a></div>
+      <div class="navitem"><a href="index.html">Reset</a></div>
     </div>
   </nav>
   <div class="forms">
