new color section added

--- a/index.html
+++ b/index.html
@@ -213,7 +213,39 @@
     </div>
   </div>
 
- 
+ <div class="skills">
+    <div class="skillscontainer">
+      <div class="heading align">
+        <h2>Select Theme</h2>
+      </div>
+      <div class="skillinput align">
+        <div class="skillbox">
+          <label for="" class="item">Select COlor</label>
+          <input type="text" list ="colors"class="item input colorss" placeholder="eg. Java" oninput="updatecolor()" />
+        </div>
+       
+      </div>
+    </div>
+  </div>
+  <datalist id="colors">
+    <option value="Red"></option>
+    <option value="Green"></option>
+    <option value="Blue"></option>
+    <option value="Purple"></option>
+    <option value="Brown"></option>
+    <option value="Gray"></option>
+    <option value="Black"></option>
+    <option value="Navy"></option>
+    <option value="DarkGreen"></option>
+    <option value="DarkRed"></option>
+    <option value="DarkBlue"></option>
+    <option value="DarkMagenta"></option>
+    <option value="Maroon"></option>
+    <option value="Olive"></option>
+    <option value="MidnightBlue"></option>
+    <option value="DarkSlateGray"></option>
+</datalist>
+
   <div class="livpreview">
     <div class="heading"><h2>Live Preview</h2></div>
     <div class="live">
