--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
     crossorigin="anonymous"
     />
     <link rel="stylesheet" href="home.css" />
-    <title>Document</title>
+    <title>ResumeCraft</title>
   </head>
   <body>
     <nav class="navbar" style="background-color: black; border: 0px solid black;" >
