--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                  <div class="locationexp1 locationexp fullname "></div>
                  <div class="joinexp1 joinexp fullname "></div>
                  <div class="leaveexp1 leaveexp fullname "></div>
-                 <div class="desexp1 desexp hidden"></div>
+                 <div class="desexp1 desexp "></div>
                  <!-- Experience 2 -->
 <div class="titleexp2 titleexp hidden"></div>
 <div class="companyexp2 companyexp fullname hidden"></div>
