--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="column">
           <div class="about" id="names">
-            <label for="names" class="item">Profile Image</label><input type="file" class="item inputboxes pro" />
+            <label for="names" class="item">Profile Image</label><input type="file" class="item inputboxes pro" accept="image/*"/>
           </div>
           
           <div class="about">
