--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
  
 
-  <div class="livpreview">
+  <div class="livpreview" contenteditable="true">
     <div class="heading"><h2>Live Preview</h2></div>
     <div class="live">
       <div class="leftlive">
