--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
 
  
 
-  <div class="livpreview" contenteditable="true">
+  <div class="livpreview" >
     <div class="heading"><h2>Live Preview</h2></div>
-    <div class="live">
+    <div class="live" contenteditable="true">
       <div class="leftlive">
           <div class="profileimage">
             <div class="imagepreview">
@@ -258,7 +258,7 @@
           </div>
           <div class="leftcontainer leftchild">
             <div class="aboutlive">
-              <div class="liveheading"><h3>About</h3></div>
+              <div class="liveheading" contenteditable="false contenteditable="false""><h3>About</h3></div>
               <div class="aboutliveitem0 aboutitem fullname"></div>
               <div class="aboutliveitem1 aboutitem fullname"></div>
               <div class="aboutliveitem2 aboutitem fullname"></div>
@@ -287,7 +287,7 @@
             </div>
             <div class="liveskills leftchild">
               <div class="liveskillscontainer">
-                <div class="liveheading tops"><h3>Skills</h3></div>
+                <div class="liveheading tops" contenteditable="false"><h3>Skills</h3></div>
                 <div class="skillslive">
                 <div class="skillitem1 skillitem"></div>
                 <div class="skillitem2 skillitem"></div>
@@ -318,7 +318,7 @@
       <div class="rightlive">
           <div class="liveachieve">
             <div class="liveachievecontainer">
-              <div class="liveheading tops"><h3>Achievements</h3></div>
+              <div class="liveheading tops" contenteditable="false"><h3>Achievements</h3></div>
               <div class="liveAchievers">
                 <div class="achieveitem1 achieveitem "></div>
 <p class="desitem1 desitem "></p>
@@ -348,7 +348,7 @@
           </div>
           <div class="liveexp">
             <div class="liveexpcontainer">
-              <div class="liveheading tops"><h3>Experience</h3></div>
+              <div class="liveheading tops" contenteditable="false"><h3>Experience</h3></div>
               <div class="liveexperience">
                  <!-- Experience 1 -->
                  <div class="titleexp1 titleexp "></div>
@@ -436,7 +436,7 @@
           </div>
           <div class="liveedu">
             <div class="liveeducontainer">
-              <div class="liveheading"><h3>Education</h3></div>
+              <div class="liveheading" contenteditable="false"><h3>Education</h3></div>
               <div class="liveedubox">
           <!-- Institute -->
 <div class="instlive1 instlive"></div>
@@ -577,7 +577,7 @@
           </div>
           <div class="livepro">
             <div class="liveprocontainer">
-              <div class="liveheading"><h3>Projects</h3></div>
+              <div class="liveheading" contenteditable="false"><h3>Projects</h3></div>
               <div class="projector">
                 <!-- Project 1 -->
 <div class="protitle1 protitle"></div>
