--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
           </div>
           <div class="leftcontainer leftchild">
             <div class="aboutlive">
-              <div class="liveheading" contenteditable="false contenteditable="false""><h3>About</h3></div>
+              <div class="liveheading" contenteditable="false"><h3>About</h3></div>
               <div class="aboutliveitem0 aboutitem fullname"></div>
               <div class="aboutliveitem1 aboutitem fullname"></div>
               <div class="aboutliveitem2 aboutitem fullname"></div>
@@ -642,7 +642,7 @@
         <!-- Right Section -->
         <div class="footer-contact" style="flex: 1; margin-bottom: 20px;">
           <h3 style="color: #f4f4f4;">Contact Us</h3>
-          <p style="font-size: 14px; line-height: 1.6; color: #bbb;">Email: <a href="mailto:support@resumebuilder.com" style="color: #bbb; text-decoration: none;">shubham1singh23@gmail.com</a></p>
+          <p style="font-size: 14px; line-height: 1.6; color: #bbb;">Email: <a href="mailto:support@resumebuilder.com" style="color: #bbb; text-decoration: none;">shubh@gmail.com</a></p>
           <p style="font-size: 14px; line-height: 1.6; color: #bbb;">Phone: 8850852269</p>
         </div>
       </div>
